# tictactoe

./: .clang-format  .clang-tidy  .gitignore  CMakeLists.txt  CMakePresets.json  README.md  main.c  term.c  tictactoe.c  tictactoe.h  typedefs.h
src/: CMakeLists.txt  main.c  term.c  term.h  tictactoe.c  tictactoe.h  ttt_config.h  typedefs.h
